--- a/index.html
+++ b/index.html
@@ -6,5 +6,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
   </head>
-  <body></body>
+  <body>
+    Hello
+
+    <button onClick="connect()">Connect</button>
+
+    <script>
+      async function connect() {
+        if (typeof window.ethereum !== "undefined") {
+          await window.ethereum.request({ method: "eth_requestAccounts" });
+        }
+      }
+    </script>
+  </body>
 </html>
